--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations.json
@@ -2068,6 +2068,13 @@
       "type": "object",
       "description": "Custom Summary Results",
       "properties": {
+        "conversations": {
+          "type": "array",
+          "description": "array of conversations",
+          "items": {
+            "$ref": "#/definitions/ConversationsSummaryResult"
+          }
+        },
         "errors": {
           "type": "array",
           "description": "Errors by document id.",
@@ -2089,6 +2096,7 @@
         }
       },
       "required": [
+        "conversations",
         "errors",
         "projectName",
         "deploymentName"
@@ -3574,6 +3582,13 @@
       "type": "object",
       "description": "Summary Results",
       "properties": {
+        "conversations": {
+          "type": "array",
+          "description": "array of conversations",
+          "items": {
+            "$ref": "#/definitions/ConversationsSummaryResult"
+          }
+        },
         "errors": {
           "type": "array",
           "description": "Errors by document id.",
@@ -3591,13 +3606,9 @@
         }
       },
       "required": [
+        "conversations",
         "errors",
         "modelVersion"
-      ],
-      "allOf": [
-        {
-          "$ref": "#/definitions/SummaryResultBase"
-        }
       ]
     },
     "SummaryResultBase": {
