--- a/specification/cognitiveservices/data-plane/Language/stable/2022-05-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2022-05-01/analyzeconversations.json
@@ -195,7 +195,11 @@
       "properties": {
         "kind": {
           "$ref": "#/definitions/AnalyzeConversationTaskKind",
-          "description": "The base class of a conversation input task."
+          "description": "The base class of a conversation input task.",
+          "x-ms-mutability": [
+            "read",
+            "create"
+          ]
         }
       },
       "discriminator": "kind",
