--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
@@ -87,55 +87,18 @@
     },
     "/language/analyze-conversations/jobs": {
       "post": {
-        "operationId": "AnalyzeConversationSubmitJob",
+        "operationId": "SubmitJob",
+        "description": "Analyzes the input conversation utterance.",
         "parameters": [
           {
-            "name": "api-version",
-            "in": "query",
-            "description": "Analyze Conversations Service Versions",
-            "required": true,
-            "type": "string",
-            "enum": [
-              "2022-05-01",
-              "2023-04-01",
-              "2023-04-15-preview"
-            ],
-            "x-ms-enum": {
-              "name": "Versions",
-              "modelAsString": true,
-              "values": [
-                {
-                  "name": "v2022_05_01",
-                  "value": "2022-05-01",
-                  "description": "Version 2022-05-01"
-                },
-                {
-                  "name": "v2023_04_01",
-                  "value": "2023-04-01",
-                  "description": "Version 2023-04-01"
-                },
-                {
-                  "name": "v2023_04_15_preview",
-                  "value": "2023-04-15-preview",
-                  "description": "Version 2023-04-15-preview"
-                }
-              ]
-            }
+            "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
           },
           {
             "name": "body",
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "analyzeConversationJobsInput": {
-                  "$ref": "#/definitions/AnalyzeConversationJobsInput"
-                }
-              },
-              "required": [
-                "analyzeConversationJobsInput"
-              ]
+              "$ref": "#/definitions/AnalyzeConversationJobsInput"
             }
           }
         ],
@@ -146,7 +109,7 @@
               "Operation-Location": {
                 "type": "string",
                 "format": "uri",
-                "description": "The location of an instance of ResourceOperationStatus"
+                "description": "The location for monitoring the operation state."
               }
             }
           },
@@ -168,53 +131,26 @@
     },
     "/language/analyze-conversations/jobs/{jobId}": {
       "get": {
-        "operationId": "AnalyzeConversationJobStatus",
+        "operationId": "JobStatus",
+        "summary": "Get analysis status and results",
+        "description": "Get the status of an analysis job. A job can consist of one or more tasks. After all tasks succeed, the job transitions to the succeeded state and results are available for each task.",
         "parameters": [
+          {
+            "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
+          },
+          {
+            "name": "jobId",
+            "in": "path",
+            "description": "job ID",
+            "required": true,
+            "type": "string"
+          },
           {
             "name": "showStats",
             "in": "query",
             "description": "(Optional) if set to true, response will contain request and document level statistics.",
             "required": false,
             "type": "boolean"
-          },
-          {
-            "name": "api-version",
-            "in": "query",
-            "description": "Analyze Conversations Service Versions",
-            "required": true,
-            "type": "string",
-            "enum": [
-              "2022-05-01",
-              "2023-04-01",
-              "2023-04-15-preview"
-            ],
-            "x-ms-enum": {
-              "name": "Versions",
-              "modelAsString": true,
-              "values": [
-                {
-                  "name": "v2022_05_01",
-                  "value": "2022-05-01",
-                  "description": "Version 2022-05-01"
-                },
-                {
-                  "name": "v2023_04_01",
-                  "value": "2023-04-01",
-                  "description": "Version 2023-04-01"
-                },
-                {
-                  "name": "v2023_04_15_preview",
-                  "value": "2023-04-15-preview",
-                  "description": "Version 2023-04-15-preview"
-                }
-              ]
-            }
-          },
-          {
-            "name": "jobId",
-            "in": "path",
-            "required": true,
-            "type": "string"
           }
         ],
         "responses": {
@@ -241,44 +177,17 @@
     },
     "/language/analyze-conversations/jobs/{jobId}:cancel": {
       "post": {
-        "operationId": "AnalyzeConversationCancelJob",
+        "operationId": "Cancel",
+        "summary": "Cancel a long-running Text Analysis conversations job",
+        "description": "Cancel a long-running job for text analysis of conversations.",
         "parameters": [
           {
-            "name": "api-version",
-            "in": "query",
-            "description": "Analyze Conversations Service Versions",
-            "required": true,
-            "type": "string",
-            "enum": [
-              "2022-05-01",
-              "2023-04-01",
-              "2023-04-15-preview"
-            ],
-            "x-ms-enum": {
-              "name": "Versions",
-              "modelAsString": true,
-              "values": [
-                {
-                  "name": "v2022_05_01",
-                  "value": "2022-05-01",
-                  "description": "Version 2022-05-01"
-                },
-                {
-                  "name": "v2023_04_01",
-                  "value": "2023-04-01",
-                  "description": "Version 2023-04-01"
-                },
-                {
-                  "name": "v2023_04_15_preview",
-                  "value": "2023-04-15-preview",
-                  "description": "Version 2023-04-15-preview"
-                }
-              ]
-            }
+            "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
           },
           {
             "name": "jobId",
             "in": "path",
+            "description": "job ID",
             "required": true,
             "type": "string"
           }
@@ -290,7 +199,7 @@
               "Operation-Location": {
                 "type": "string",
                 "format": "uri",
-                "description": "The location of an instance of ResourceOperationStatus"
+                "description": "The location for monitoring the operation state."
               }
             }
           },
@@ -308,44 +217,6 @@
           }
         },
         "x-ms-long-running-operation": true
-      }
-    },
-    "/language/analyze-conversations2/jobs/{jobId}": {
-      "get": {
-        "operationId": "GetImageOperationStatus",
-        "description": "Returns the status of the images operation",
-        "parameters": [
-          {
-            "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
-          },
-          {
-            "name": "jobId",
-            "in": "path",
-            "description": ".",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "The request has succeeded.",
-            "schema": {
-              "$ref": "#/definitions/AnalyzeConversationJobState"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/Azure.Core.Foundations.ErrorResponse"
-            },
-            "headers": {
-              "x-ms-error-code": {
-                "type": "string",
-                "description": "String error code indicating what went wrong."
-              }
-            }
-          }
-        }
       }
     }
   },
@@ -492,7 +363,11 @@
         },
         "jobId": {
           "type": "string",
-          "description": "job ID"
+          "description": "job ID",
+          "x-ms-mutability": [
+            "read",
+            "create"
+          ]
         },
         "lastUpdateDateTime": {
           "type": "string",
@@ -552,7 +427,11 @@
         },
         "analysisInput": {
           "$ref": "#/definitions/MultiLanguageConversationAnalysisInput",
-          "description": "Analysis Input"
+          "description": "Analysis Input",
+          "x-ms-mutability": [
+            "read",
+            "create"
+          ]
         },
         "tasks": {
           "type": "array",
@@ -686,7 +565,11 @@
       "properties": {
         "kind": {
           "$ref": "#/definitions/AnalyzeConversationTaskKind",
-          "description": "The base class of a conversation input task."
+          "description": "The base class of a conversation input task.",
+          "x-ms-mutability": [
+            "read",
+            "create"
+          ]
         }
       },
       "discriminator": "kind",
@@ -1961,7 +1844,11 @@
         },
         "jobId": {
           "type": "string",
-          "description": "job ID"
+          "description": "job ID",
+          "x-ms-mutability": [
+            "read",
+            "create"
+          ]
         },
         "lastUpdateDateTime": {
           "type": "string",
@@ -2992,9 +2879,6 @@
           }
         ]
       }
-    },
-    "SubmitAccepted": {
-      "type": "object"
     },
     "SummaryAspect": {
       "type": "string",
