--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
@@ -131,7 +131,7 @@
     },
     "/language/analyze-conversations/jobs/{jobId}": {
       "get": {
-        "operationId": "JobStatus",
+        "operationId": "GetJobStatus",
         "summary": "Get analysis status and results",
         "description": "Get the status of an analysis job. A job can consist of one or more tasks. After all tasks succeed, the job transitions to the succeeded state and results are available for each task.",
         "parameters": [
@@ -141,7 +141,7 @@
           {
             "name": "jobId",
             "in": "path",
-            "description": "job ID",
+            "description": ".",
             "required": true,
             "type": "string"
           },
