--- a/dev/cognitiveservices/data-plane/Language/analyzeconversations.json
+++ b/dev/cognitiveservices/data-plane/Language/analyzeconversations.json
@@ -2092,7 +2092,7 @@
                 },
                 {
                   "value": "recap",
-                  "description": "General recap of a conversation. It generally produces a few sentences describing the key topics or developments during theconversation."
+                  "description": "General recap of a conversation in paragraph form."
                 }
               ]
             }
