--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
@@ -129,6 +129,52 @@
         "x-ms-long-running-operation": true
       }
     },
+    "/language/analyze-conversations/jobs/{jobId}": {
+      "get": {
+        "operationId": "JobStatus",
+        "summary": "Get analysis status and results",
+        "description": "Get the status of an analysis job. A job can consist of one or more tasks. After all tasks succeed, the job transitions to the succeeded state and results are available for each task.",
+        "parameters": [
+          {
+            "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
+          },
+          {
+            "name": "jobId",
+            "in": "path",
+            "description": "job ID",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "showStats",
+            "in": "query",
+            "description": "(Optional) if set to true, response will contain request and document level statistics.",
+            "required": false,
+            "type": "boolean"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The request has succeeded.",
+            "schema": {
+              "$ref": "#/definitions/AnalyzeConversationJobState"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Azure.Core.Foundations.ErrorResponse"
+            },
+            "headers": {
+              "x-ms-error-code": {
+                "type": "string",
+                "description": "String error code indicating what went wrong."
+              }
+            }
+          }
+        }
+      }
+    },
     "/language/analyze-conversations/jobs/{jobId}:cancel": {
       "post": {
         "operationId": "Cancel",
@@ -171,97 +217,6 @@
           }
         },
         "x-ms-long-running-operation": true
-      }
-    },
-    "/language/analyze-conversations/jobs/{jobId}/operations/{operationId}": {
-      "get": {
-        "operationId": "JobStatus",
-        "summary": "Get analysis status and results",
-        "description": "Get the status of an analysis job. A job can consist of one or more tasks. After all tasks succeed, the job transitions to the succeeded state and results are available for each task.",
-        "parameters": [
-          {
-            "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
-          },
-          {
-            "name": "jobId",
-            "in": "path",
-            "description": "job ID",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "operationId",
-            "in": "path",
-            "description": "The unique ID of the operation.",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "The request has succeeded.",
-            "schema": {
-              "type": "object",
-              "description": "Provides status details for long running operations.",
-              "properties": {
-                "id": {
-                  "type": "string",
-                  "description": "The unique ID of the operation."
-                },
-                "status": {
-                  "$ref": "#/definitions/Azure.Core.Foundations.OperationState",
-                  "description": "The status of the operation"
-                },
-                "error": {
-                  "$ref": "#/definitions/Azure.Core.Foundations.Error",
-                  "description": "Error object that describes the error when status is \"Failed\"."
-                },
-                "result": {
-                  "type": "object",
-                  "description": "The result of the operation.",
-                  "properties": {
-                    "queryParams": {
-                      "type": "object",
-                      "properties": {
-                        "parameters": {
-                          "type": "object",
-                          "properties": {
-                            "showStats": {
-                              "type": "boolean",
-                              "description": "(Optional) if set to true, response will contain request and document level statistics."
-                            }
-                          }
-                        }
-                      },
-                      "required": [
-                        "parameters"
-                      ]
-                    }
-                  },
-                  "required": [
-                    "queryParams"
-                  ]
-                }
-              },
-              "required": [
-                "id",
-                "status"
-              ]
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/Azure.Core.Foundations.ErrorResponse"
-            },
-            "headers": {
-              "x-ms-error-code": {
-                "type": "string",
-                "description": "String error code indicating what went wrong."
-              }
-            }
-          }
-        }
       }
     }
   },
@@ -424,7 +379,7 @@
           "type": "array",
           "description": "errors",
           "items": {
-            "$ref": "#/definitions/ErrorResponseItem"
+            "$ref": "#/definitions/ErrorResponse"
           },
           "x-ms-identifiers": []
         },
@@ -873,42 +828,6 @@
           "$ref": "#/definitions/Azure.Core.Foundations.InnerError",
           "description": "Inner error."
         }
-      }
-    },
-    "Azure.Core.Foundations.OperationState": {
-      "type": "string",
-      "description": "Enum describing allowed operation states.",
-      "enum": [
-        "InProgress",
-        "Succeeded",
-        "Failed",
-        "Canceled"
-      ],
-      "x-ms-enum": {
-        "name": "OperationState",
-        "modelAsString": true,
-        "values": [
-          {
-            "name": "InProgress",
-            "value": "InProgress",
-            "description": "The operation is in progress."
-          },
-          {
-            "name": "Succeeded",
-            "value": "Succeeded",
-            "description": "The operation has completed successfully."
-          },
-          {
-            "name": "Failed",
-            "value": "Failed",
-            "description": "The operation has failed."
-          },
-          {
-            "name": "Canceled",
-            "value": "Canceled",
-            "description": "The operation has been canceled by the user."
-          }
-        ]
       }
     },
     "BaseExtraInformation": {
@@ -1560,7 +1479,7 @@
           "type": "array",
           "description": "Errors by document id.",
           "items": {
-            "$ref": "#/definitions/DocumentErrorItem"
+            "$ref": "#/definitions/DocumentError"
           }
         },
         "statistics": {
@@ -1673,24 +1592,6 @@
         "error"
       ]
     },
-    "DocumentErrorItem": {
-      "type": "object",
-      "description": "Contains details of errors encountered during a job execution.",
-      "properties": {
-        "id": {
-          "type": "string",
-          "description": "The ID of the input document."
-        },
-        "error": {
-          "$ref": "#/definitions/ErrorResponseItem",
-          "description": "Error encountered."
-        }
-      },
-      "required": [
-        "id",
-        "error"
-      ]
-    },
     "EntitySubtype": {
       "type": "object",
       "description": "The concrete entity Subtype model of extra information.",
@@ -1736,19 +1637,6 @@
       }
     },
     "ErrorResponse": {
-      "type": "object",
-      "description": "Error response.",
-      "properties": {
-        "error": {
-          "$ref": "#/definitions/Azure.Core.Foundations.Error",
-          "description": "The error object."
-        }
-      },
-      "required": [
-        "error"
-      ]
-    },
-    "ErrorResponseItem": {
       "type": "object",
       "description": "Error response.",
       "properties": {
@@ -1924,7 +1812,7 @@
           "type": "array",
           "description": "errors",
           "items": {
-            "$ref": "#/definitions/ErrorResponseItem"
+            "$ref": "#/definitions/ErrorResponse"
           },
           "x-ms-identifiers": []
         }
@@ -1969,7 +1857,7 @@
           "type": "array",
           "description": "errors",
           "items": {
-            "$ref": "#/definitions/ErrorResponseItem"
+            "$ref": "#/definitions/ErrorResponse"
           },
           "x-ms-identifiers": []
         },
@@ -2470,7 +2358,7 @@
           "type": "array",
           "description": "Errors by document id.",
           "items": {
-            "$ref": "#/definitions/DocumentErrorItem"
+            "$ref": "#/definitions/DocumentError"
           }
         },
         "statistics": {
@@ -3057,7 +2945,7 @@
           "type": "array",
           "description": "Errors by document id.",
           "items": {
-            "$ref": "#/definitions/DocumentErrorItem"
+            "$ref": "#/definitions/DocumentError"
           }
         },
         "statistics": {
